--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='./consoliteracy/index.html'>consoliterate programming</a>
+<a href='./3-consoliteracy/index.html'>consoliterate programming</a>
