--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<a href='./3-consoliteracy/index.html'>consoliterate programming</a>
+<a href='./4-recursions-in-js/index.html'>recursive calls with js functions</a>
